--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,25 +3,60 @@
   <div style="text-align:center">
     <h1>
       Welcome to {{title}}!
-    </h1>    
+    </h1>
   </div>
   <hr>
   <h2>Here are some links to help you start: </h2>
   <ul>
     <li>
-      <h2><a target="_blank" rel="noopener" href="https://scotch.io/tutorials/using-sass-with-the-angular-cli">Using Sass with the Angular CLI</a></h2>
+      <h2>
+        <a target="_blank" rel="noopener" href="https://scotch.io/tutorials/using-sass-with-the-angular-cli">Using Sass with the Angular CLI</a>
+      </h2>
     </li>
     <li>
-      <h2><a target="_blank" rel="noopener" href="https://ng-bootstrap.github.io/#/home">Bootstrap 4 components</a></h2>
+      <h2>
+        <a target="_blank" rel="noopener" href="https://ng-bootstrap.github.io/#/home">Bootstrap 4 components</a>
+      </h2>
     </li>
   </ul>
 </div>
 <hr>
 <div class="container">
-  <div class="row justify-content-md-center">        
+  <div class="row justify-content-md-center">
     <div class="col col-md-auto">
-      <ngb-alert type="success" *ngIf="staticAlertOpened" (close)="staticAlertOpened = false">You know it worked if this is showing.</ngb-alert>      
+      <ngb-alert type="success" *ngIf="staticAlertOpened" (close)="staticAlertOpened = false">You know it worked if this is showing.</ngb-alert>
       <button *ngIf="!staticAlertOpened" class="btn btn-primary" (click)="staticAlertOpened = true">Open Message</button>
-    </div>    
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <div ngbDropdown class="d-inline-block">
+        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Toggle dropdown</button>
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+          <button class="dropdown-item">Action - 1</button>
+          <button class="dropdown-item">Another Action</button>
+          <button class="dropdown-item">Something else is here</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="col text-right">
+      <div ngbDropdown placement="top-right" class="d-inline-block">
+        <button class="btn btn-outline-primary" id="dropdownBasic2" ngbDropdownToggle>Toggle dropup</button>
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic2">
+          <button class="dropdown-item">Action - 1</button>
+          <button class="dropdown-item">Another Action</button>
+          <button class="dropdown-item">Something else is here</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <label for="typeahead-basic">Search for a state:</label>
+      <input id="typeahead-basic" type="text" class="form-control" [(ngModel)]="model" [ngbTypeahead]="search"/>      
+    </div>
   </div>
 </div>
